feat: player movement

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 .vs/magical-mirai/FileContentIndex/bbc5d61e-2ffd-4bca-ae2e-fd49a78172ac.vsidx
 .vs/slnx.sqlite
 .vs/magical-mirai/FileContentIndex/542e7704-c5e4-4163-bc0f-f7b5b22fe361.vsidx
+.vs/magical-mirai/FileContentIndex/ef26f0d2-bf8d-4c75-b3a0-7d6cc5dec546.vsidx
+.vs/magical-mirai/FileContentIndex/0511df62-3e7e-4882-ad35-0cc9d8e235b8.vsidx
+.vs/magical-mirai/FileContentIndex/ffdd6ad8-7c36-403c-8e9e-2065df4c9850.vsidx
+/.vs
